# crazyflie_project

./: README.md  docker-compose-nvidia.yaml  docker-compose.yaml  start-nvidia.sh  start.sh
demos/: demos.xlsx
rapports-hebdomadaires/: Rapport_avancement_semaine10.docx  Rapport_avancement_semaine11.docx  Rapport_avancement_semaine3.docx  Rapport_avancement_semaine4.docx  Rapport_avancement_semaine5.docx  Rapport_avancement_semaine6.docx  Rapport_avancement_semaine7.docx  Rapport_avancement_semaine8.docx  Rapport_avancement_semaine9.docx
rapports-hebdomaidaires/: Rapport_avancement_semaine1.docx  Rapport_avancement_semaine2.docx  ~$pport_avancement_semaine1.docx
update_tag_script/: Dockerfile  pyproject.toml  update_tag.py
update_tag_script/update_tag_script/: script.py
videos/: RF1_identifier_PDF.mov
